--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ classifier =
     Operating System :: OS Independent
 
 [options]
+packages = find:
 install_requires =
     ensure==1.0.2
 python_requires = >=3.7    
