--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ envlist = python3.8
 python = 
     3.8: python3.8
 
-[testenv]
-deps = -rrequirements_dev.txt
+# [testenv] # not working 
+# deps = -rrequirements_dev.txt 
 commands = 
     # stop the build if there are Python syntax errors or undefined names
     flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
